quick alignment fix, fixed music player width bug

--- a/src/components/card.css
+++ b/src/components/card.css
@@ -84,11 +84,10 @@
 @media screen and (max-width: 1240px) {
     .cards-container {
         display: block;
-        margin-bottom: 0;
         padding-bottom: 12vh;
         margin-left: 20px;
         margin-right: 20px;
-        margin-top: 80px;
+        margin-top: 100px;
     }
     .card-container {
         width: 100%;
@@ -99,10 +98,13 @@
         padding-top: 20px;
         padding-bottom: 20px;
     }
+    .play {
+        font-size: 4rem;
+        filter: opacity(0.6);
+    }
     .card-text h5 {
         font-size: 0.9rem;
     }
-    
     .card-text p {
         font-size: 0.7rem;
         color: gray;
