--- a/src/components/musicplayer.css
+++ b/src/components/musicplayer.css
@@ -211,36 +211,38 @@ input[type='range']::-webkit-slider-runnable-track {
 
 @media screen and (max-width: 1240px) {
     .music-container {
-        height: 160px;
-        max-width: 90vw;
+        height: 180px;
+        width: 100%;
+        padding-right: 5%;
+        padding-left: 5%;
         position: fixed;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 0 !important;
     }
     .player-buttons {
-        height: 10%;
+        height: 30%;
         order: 3;
-        padding-top: 40px;
-        margin-bottom: -10px;
+        margin-top: -10px;
     }
     .player-buttons button {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
     }
     .song-title {
-        height: 20%;
+        height: 30%;
         width: 100%;
         order: 1;
         font-size: 0.8rem;
         text-align: center !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
     .player-slider {
         width: 100%;
-        height: 20%;
+        height: 30%;
         order: 2;
-        padding-top: 25px;
     }
     .volume {
         display: none;
